chore: fix sonar linting issues